# civilen-web-backend

./: .dockerignore  .gitignore  README.md  app.env.example  database.env.example  docker-compose.yml
services/web/: Dockerfile  entrypoint.sh  pyproject.toml  seed.yml
services/web/app/: backend_pre_start.py  main.py
services/web/app/api/: api.py  dependencies.py
services/web/app/api/routers/: admin.py  bulk.py  errata.py  order.py  payment.py  product.py  recommended.py  slide.py
services/web/app/core/: config.py  security.py  utils.py
services/web/app/cruds/: __init__.py  address.py  admin.py  amazonProduct.py  base.py  errata.py  order.py  payment.py  product.py  recommended.py  shipbobProduct.py  slide.py
services/web/app/database/: base_class.py  init_db.py
services/web/app/enums/: __init__.py  order.py  payment.py  product.py
services/web/app/integrations/: __init__.py  stripe.py
services/web/app/models/: __init__.py  address.py  admin.py  amazonProduct.py  errata.py  order.py  orderItem.py  payment.py  product.py  productImage.py  recommended.py  shipbobProduct.py  slide.py
services/web/app/schemas/: address.py  admin.py  amazonProduct.py  base.py  errata.py  order.py  orderItem.py  payment.py  product.py  productImage.py  recommended.py  shipbobProduct.py  slide.py
services/web/app/services/: __init__.py  amazonProduct.py  base.py  errata.py  order.py  payment.py  product.py  recommended.py  shipbobProduct.py  slide.py
services/web/migrations/versions/: b824933b253b_intial.py  c2e73df0b64d_initial.py
(+5 files in other folders)
